Neue Vorlesung hinzugefügt
Referenzen hinzugefügt von vorherigen Kapiteln, diese sind immer noch mit todo gekennzeichnet -> leichter zu prüfen

--- a/Vorlesungen/vl_14.tex
+++ b/Vorlesungen/vl_14.tex
@@ -181,9 +181,8 @@ lesen}
 	\end{align*}
 	Nun zur Eindeutigkeit:\\
 	Da $g \neq 0$, ist $G$ streng monoton wachsend (falls g > 0) oder streng monoton 
-	fallend, falls $g < 0$. Da $G$ differenzierbar ist (Satz vor dem hauptsatz der 
-	differential Rechnung)
-	\todo{Referenzierung Satz 1 § 3}
+	fallend, falls $g < 0$. Da $G$ differenzierbar ist (Satz~\ref{vl_12_satz_01})
+	\todo{ref prüfen}
 	und invertierbar (wegen der Monotonie) existiert also eine differenzierbare 
 	Umkehrfunktion $G^{-1}$. Damit haben wir, dass für jede Lösung 
 	$y : I' \rightarrow \mathbb{R}$ von Gleichung~\ref{vl_14_gl_2} mit 
