--- a/Vorlesungen/vl_16.tex
+++ b/Vorlesungen/vl_16.tex
@@ -319,7 +319,7 @@
 }\end{Beispiel}
 
 Angenommen sämtliche Koeffizienten der Differentialgleichung sind reell. Wie erhalten wir 
-aus Satz~\ref{vl_16_def_1} \todo{ref?} ein reellwertiges Fundamentalsystem? \\
+aus Satz~\ref{vl_16_def_1} \todo{ref prüfen} ein reellwertiges Fundamentalsystem? \\
 Also sei $P(t) \in \mathbb{R}[t]$ mit paarweise verschiedenen Nullstellen.
 \begin{align*}
 	\lambda_1, \overline{\lambda_1}, \hdots, \lambda_k, \overline{\lambda_k} \in 
