--- a/Vorlesungen/vl_13.tex
+++ b/Vorlesungen/vl_13.tex
@@ -37,7 +37,7 @@ die nicht beschränkt sind.
 	\begin{align*}
 		\int_a^b \frac{\mathrm{dx}}{x^s} \dd{x} = & \int_a^b x^{-s} \dd{x}
 		  = \left.\frac{x^{-s+1}}{-s+1} \right\vert_a^b \\
-		  & = \frac{\left( b^{-s+1} - a^{-s+1}\right)}{-s+1} \overset{a = 1}{=}
+		   = & \frac{\left( b^{-s+1} - a^{-s+1}\right)}{-s+1} \overset{a = 1}{=}
 		  \frac{1}{s-1}\left(1-b^{-s+1}\right) 
 		  \overset{b \rightarrow \infty}{\longrightarrow}
 		  \frac{1}{s-1}
