--- a/gesamt.tex
+++ b/gesamt.tex
@@ -35,6 +35,9 @@
 \newtheorem{Korollar}{Korollar}[section]
 \theoremstyle{definition}
 
+\newtheorem{Lemma}{Lemma}[section]
+\theoremstyle{plain}
+
 %\newtheorem*{Beweis}{Beweis}
 %\theoremstyle{proof}
 
@@ -87,5 +90,6 @@
 \input{Vorlesungen/vl_17}
 \input{Vorlesungen/vl_18}
 \input{Vorlesungen/vl_19}
+\input{Vorlesungen/vl_20}
 \end{document}
  	
