--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -155,8 +155,8 @@
 		\frac{\mathrm{d}}{dt}F(t)\cdot G(t) = & F(t)G(t) + F(t)G'(t) = 
 		f(t)G(t) + F(t)g(t)
 	\end{align}
-	Da $f,g \in \Riemann a b$ und $F,G$ differenzierbar (und daher auch in 
-	$\Riemann a b$), ist die rechte Seite in $\Riemann a b$. \\
+	Da $f,g \in \riemann a b$ und $F,G$ differenzierbar (und daher auch in 
+	$\riemann a b$), ist die rechte Seite in $\riemann a b$. \\
 	Mit Satz~\ref{vl_12_satz_02} haben wir:
 	\begin{align*}
 		\int_a^b f(t) G(t) + F(t)g(t) \dd{t} = F(b)G(b) -F(a)G(a)
