--- a/Vorlesungen/vl_18.tex
+++ b/Vorlesungen/vl_18.tex
@@ -165,11 +165,10 @@
 }\end{Satz}
 
 \begin{proof}
-	Da $f_n'$ gleichmäßig gegen $g$ konvergiert ist $g$ stetig (Satz~\ref{vl_17_def_2}) 
-	\todo{ref prüfen}
+	Da $f_n'$ gleichmäßig gegen $g$ konvergiert ist $g$ stetig (Satz~\ref{vl_17_satz_2}).
 	Daher gilt nach Satz~\ref{vl_12_satz_01} dass 
 	$G(x) = \int_a^b g \dd{t}$ differenzierbar ist und als Ableitung $g$ besitzt. 
-	Weiterhin gilt mit Satz~\ref{vl_18_satz_2} \todo{ref prüfen}:
+	Weiterhin gilt mit Satz~\ref{vl_18_satz_2}:
 	\begin{align*}
 		\int_a^x \lim\limits_{n \rightarrow \infty}{f_n'} \dd{t} = 
 		\lim\limits_{n\rightarrow \infty}{\int_a^b f_n' \dd{t}} = G(x)
