--- a/Vorlesungen/vl_19.tex
+++ b/Vorlesungen/vl_19.tex
@@ -5,17 +5,20 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 	\begin{itemize}
 		\item[ ]
 		\item Ist $f$ eine p-periodische Funktion, so ist die Fourier-Reihe $F$ 
-		von $f$ definiert als $\tilde{F}(\frac{x}{p}$, wobei $\tilde{F}$ die 
+		von $f$ definiert als $\tilde{F}(\frac{x}{p})$, wobei $\tilde{F}$ die 
 		Fourier-Reihe der (1-periodischen) Funktion $\tilde{f}: \mathbb{R} 
 		\rightarrow \mathbb{K}$ mit $\tilde{f}(x) = f(px)$ ist. \\
 		Das heißt:
 		\begin{align*}
 			F(x) = & \sum_{k=0}^{\infty} \hat{f}(k) \exp\left( 2\pi i k 
-				\frac{x}{p}\right) \\
-			\text{wobei } \hat{f} (k) = & \int_0^1 \tilde{f}(x) \cdot 
+				\frac{x}{p}\right)
+		\end{align*}
+		wobei
+		\begin{align*}
+			\hat{f} (k) = & \int_0^1 \tilde{f}(x) \cdot 
 				\exp(-2\pi i k x) \dd{x} \\
 			 = & \int_0^1 f(p\cdot x)\exp(-2\pi i k x) \\
-			\overset{t = px}{=} & \frac{1}{p}\int_0^p f(t) 
+			\xlongequal{t = px} & \frac{1}{p}\int_0^p f(t) 
 			\exp\left( \frac{-2\pi}{p}ikt \right) \dd{t}
 		\end{align*}
 		\item Ist $f: \mathbb{R} \rightarrow \mathbb{R}$ 1-periodisch, so 
@@ -36,7 +39,7 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 			\sum_{k=0}^{\infty} \hat{f}(k)\exp(2\pi ikx) 
 				+ \overline{\hat{f}(k) \exp(2\pi ikx)} \notag \\ 
 			= & \sum_{k=0}^{\infty} 2 \cdot Re(\hat{f}(k) \cdot 
-			\exp(2\pi i kx) \label{vl_19_gl_1}
+			\exp(2\pi i kx)) \label{vl_19_gl_1}
 		\end{align}
 		Spezialfall: $f(x) = f(-x)$, das heißt: $f$ ist gerade. Dann gilt:
 		\begin{align*}
@@ -45,7 +48,7 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 			 	\exp(-2\pi ik (-t+1)) \dd{t} \\
 			 = & \int_0^1 f(-t+1)\exp(2\pi i k t - 2\pi ik)  \dd{t} \\
 			 = & \int_0^1 f(t) \exp(2\pi ikt) \dd{t} \\
-			 = & \hat{f}(-k) = & \overline{\hat{f}(k)}
+			 = & \hat{f}(-k) &= & \overline{\hat{f}(k)}
 		\end{align*}
 		Ergo: $\hat{f}(k) = \hat{f}(-k) \in \mathbb{R}$ \\
 		Mit Gleichung~\ref{vl_19_gl_1} folgt:
@@ -106,8 +109,8 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 	Sei $f: \mathbb{R} \rightarrow \mathbb{C}$ eine stetige 1-periodische Funktion, 
 	die stückweise stetig differenzierbar ist, das heißt es existiert eine Partition 
 	\begin{align*}
-		0 \leq t_0 < t_1 < \hdots < t_n = 1
-	\end{align*} \todo{$\leq 1$ ?}
+		0 = t_0 < t_1 < \hdots < t_n = 1
+	\end{align*}
 	von $[0,1]$, so dass 
 	\begin{align*}
 		f\vert_{[t_{i-1},t_i]} \text{ für alle } i = 1, \hdots, n
@@ -124,38 +127,39 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 \emph{Ziel des Kapitels:} Vereinheitlichung und Verallgemeinerung bekannter \\
 Konvergenz- und Abstandsbegriffe
 
-\begin{Definition}{
+\begin{Definition}{ \label{def:metrik}
 	Sei $X$ eine Menge. Eine \emph{Metrik} auf $X$ ist eine Abbildung auf 
 	$d: X \times X \rightarrow [0, \infty)$ mit:
 	\begin{enumerate}
-		\item \label{vl_19_stp_1}$d(x,y) = 0 \Leftrightarrow x = y$
-		\item \label{vl_19_stp_2}$d(x,y) \leq d(x,z) + d(z,y)$ für alle $x,y,z \in X$
-		\item \label{vl_19_stp_3}$d(x,y) = d(y,x)$ für $x,y \in X$
+		\item[M1] \label{def:metrik:1}$d(x,y) = 0 \Leftrightarrow x = y$
+		\item[M2] \label{def:metrik:2}$d(x,y) \leq d(x,z) + d(z,y)$ für alle $x,y,z \in X$ \hfill (Dreiecksungleichung)
+		\item[M3] \label{def:metrik:3}$d(x,y) = d(y,x)$ für $x,y \in X$ \hfill (Symmetrie)
 	\end{enumerate}
 	Das Paar $(X,d)$ heißt \emph{metrischer Raum}. Oftmals sagt man einfach 
 	$X$ ist metrischer Raum, sofern die entsprechende Metrik aus dem Kontext 
 	hervorgeht.
 }\end{Definition}
 
-\begin{Bemerkung}{
-	\begin{itemize}
-		\item[ ]
-		\item Stichpunkt~\ref{vl_19_stp_2} heißt Dreiecks-Ungleichung
-		\item Stichpunkt~\ref{vl_19_stp_3} heißt Symmetrie
-	\end{itemize}
-}\end{Bemerkung}
+%\begin{Bemerkung}{
+%	\begin{itemize}
+%		\item[ ]
+%		\item Stichpunkt~\ref{def:metrik:2} heißt Dreiecks-Ungleichung
+%		\item Stichpunkt~\ref{def:metrik:3} heißt Symmetrie
+%	\end{itemize}
+%}\end{Bemerkung}
 
 \begin{Beispiel}{
+	~
 	\begin{enumerate}
-		\item[ ]
-		\item Auf $\mathbb{K}$ definiert $d(x,y) = \abs{s -y}$ eine Metrik
+%		\item[ ]
+		\item Auf $\mathbb{K}$ definiert $d(x,y) = \abs{x -y}$ eine Metrik.
 		\item Auf $\mathbb{K}^n$ definieren wir die $l_1$-Metrik durch:
 		\begin{align*}
 			d_1( (x_1, \hdots, x_n), (y_1, \hdots, y_n) ) =
 			 \sum_{i = 1}^n \abs{x_i - y_i}
 		\end{align*}
-		$d_1$ ist eine Metrik, denn \ref{vl_19_stp_1} und \ref{vl_19_stp_3} sind 
-		 trivial. \ref{vl_19_stp_2} folgt mit: \\
+		$d_1$ ist eine Metrik, denn \ref{def:metrik:1} und \ref{def:metrik:3} sind 
+		 trivial. \ref{def:metrik:2} folgt mit: \\
 		 Seien $ x, y, z \in \mathbb{K}^n $ gegeben. Dann gilt:
 		 \begin{align*}
 		 	d(x,y) = \sum_{i = 1}^n \abs{x_i - y_i} \leq 
@@ -166,21 +170,21 @@ Konvergenz- und Abstandsbegriffe
 		 \begin{align*}
 		 	d_p (x,y) = \sqrt[p]{\sum_{i=1}^n\abs{x_i-y_i}^p}
 		 \end{align*}
-		 \ref{vl_19_stp_1} und \ref{vl_19_stp_3} sind offensichtlich. Die 
-		 Dreiecksungleichung macht in diesem Falle durchaus Arbeit: 
+		 \ref{def:metrik:1} und \ref{def:metrik:3} sind offensichtlich. Die 
+		 Dreiecksungleichung macht in diesem Falle durchaus Arbeit. 
 		 Stichwort: Minkowski-Ungleichung.
 	 \item \label{vl_19_stp_4} Auf $\mathbb{K}^n$ definieren wir die $l_{\infty}$-Metrik:
 		 \begin{align*}
-		 	d_{\infty} (x,y) = \max\{\abs{x_i-y_i}\vert i = 1, \hdots, n\}
+		 	d_{\infty} (x,y) = \max\{\abs{x_i-y_i}\mid i = 1, \hdots, n\}
 		 \end{align*}
-		 \ref{vl_19_stp_1} und \ref{vl_19_stp_3} sind wieder einfach zu sehen. 
-		 \ref{vl_19_stp_2} folgt aus: \\
+		 \ref{def:metrik:1} und \ref{def:metrik:3} sind wieder einfach zu sehen. 
+		 \ref{def:metrik:2} folgt aus: \\
 		 Seien $x,y,z \in \mathbb{K}^n$ gegeben. Dann gilt:
 		 \begin{align*}
-		 	d_{\infty} (x,y) = & \max\{\abs{x_i-y_i}\vert i = 1, \hdots, n\} \\
-		 	\leq & \max\{\abs{x_i - z_i} + \abs{z_i - y_i} \vert i = 1, \hdots, n\} \\
-		 	\leq & \max\{\abs{x_i-z_i}\vert i = 1, \hdots, n\} + 
-		 	\max\{\abs{z_i - y_i}\vert i = 1, \hdots, n\}  \\
+		 	d_{\infty} (x,y) = & \max\{\abs{x_i-y_i} \mid  i = 1, \hdots, n\} \\
+		 	\leq & \max\{\abs{x_i - z_i} + \abs{z_i - y_i} \mid i = 1, \hdots, n\} \\
+		 	\leq & \max\{\abs{x_i-z_i} \mid i = 1, \hdots, n\} + 
+		 	\max\{\abs{z_i - y_i}\mid i = 1, \hdots, n\}  \\
 		 	= & d_{\infty}(x,z) + d_{\infty} (z,y)
 		 \end{align*}
 	\end{enumerate}
@@ -199,9 +203,9 @@ Konvergenz- und Abstandsbegriffe
 		\begin{align*}
 			d_D(x,y) = \begin{cases} 0 & \text{ falls } x = y \\ 1 & \text{ sonst } \end{cases}
 		\end{align*}
-		die sogenannte \emph{diskrete  Metrik} auf $X$. \ref{vl_19_stp_1} und 
-		\ref{vl_19_stp_3} sind wieder einfach zu sehen. \\
-		\ref{vl_19_stp_2}:  Ohne Einschränkung: Sei $x \neq y$ und $z \in X$ beliebig. Ist $z = x$ bzw. $z = y$, so gilt:
+		die sogenannte \emph{diskrete  Metrik} auf $X$. Die Eigenschaften \ref{def:metrik:1} und 
+		\ref{def:metrik:3} sind wieder einfach zu sehen. \\
+		Zu \ref{def:metrik:2}:  Ohne Einschränkung: Sei $x \neq y$ und $z \in X$ beliebig. Ist $z = x$ bzw. $z = y$, so gilt:
 		\begin{align*}
 			1 = d_D(x,y) \leq d_D(x,z) + d_D(z,y) = 1		
 		\end{align*}
@@ -212,23 +216,23 @@ Konvergenz- und Abstandsbegriffe
 		
 		\item Sei $X \neq \emptyset$ eine beliebige Menge und 
 		\begin{align*}
-			B(X) = \{f: X \rightarrow \mathbb{K}\vert f \text{ ist beschränkt}\}
+			B(X) = \{f: X \rightarrow \mathbb{K}\mid f \text{ ist beschränkt}\}
 		\end{align*}
 		Wir definieren:
 		\begin{align*}
 			d_\infty (f,g) = \sup_{x \in X} \abs{f(x)- g(x)}
 		\end{align*}
 		(das verallgemeinert Beispiel~\ref{vl_19_stp_4})
-		\item $X$-beliebige Menge auf $B(X) =\{f: X \rightarrow \mathbb{K}\vert f 
+		\item $X$-beliebige Menge auf $B(X) =\{f: X \rightarrow \mathbb{K}\mid f 
 		\text{ ist beschränkt}\}$ definieren wir:
 		\begin{align*}
 			d_\infty = \sup_{x \in X} \abs{f(x) -g(x)}
 		\end{align*}
-		\ref{vl_19_stp_1} und \ref{vl_19_stp_3} sind weiter einfach. 
-		\ref{vl_19_stp_3} folgt aus: 
+		\ref{def:metrik:1} und \ref{def:metrik:3} sind weiter einfach. 
+		\ref{def:metrik:3} folgt aus: 
 		\begin{align*}
-			d_\infty (f,g) = & \sup_{x \in X} \abs{ f(x) -g(x)} 
-			\leq \sup_{x \in X} \abs{f(x)-h(x)}+\abs{h(x)-g(x)}  \\
+			d_\infty (f,g) = & \sup_{x \in X} \abs{ f(x) -g(x)} \\
+			\leq &\sup_{x \in X} \abs{f(x)-h(x)}+\abs{h(x)-g(x)}  \\
 			\leq &  \sup_{x \in X}\abs{f(x)-h(x)} + \sup_{y \in X}\abs{h(y)-g(y)} \\
 			= & d_\infty (f,h) + d_\infty (h,g) \text{ für alle } f,g,h \in B(X) 
 		\end{align*}
@@ -249,6 +253,6 @@ Konvergenz- und Abstandsbegriffe
 		\item[ ]
 		\item Mit Ausnahme von Beispiel~\ref{vl_19_stp_5},~\ref{vl_19_stp_6},~\ref{vl_19_stp_7} gehören die obigen Beispiele zur 
 		Klasse sogenannter normierter Räume beziehungsweise Skalarprodukträume, 
-		auf denen noch mehr Struktur vorliegt als \glqq nur\grqq{} eine Metrik.
+		auf denen noch mehr Struktur vorliegt als \enquote{nur} eine Metrik.
 	\end{itemize}
 }\end{Bemerkung}
