Anmerkung: Fehler in der Vorlesung

--- a/Vorlesungen/vl_19.tex
+++ b/Vorlesungen/vl_19.tex
@@ -41,6 +41,7 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 			= & \sum_{k=0}^{\infty} 2 \cdot Re(\hat{f}(k) \cdot 
 			\exp(2\pi i kx)) \label{vl_19_gl_1}
 		\end{align}
+		\todo{Hier sollte ein Fehler in der VL sein. $\hat{f}(0)$ gibt es nicht doppelt.}
 		Spezialfall: $f(x) = f(-x)$, das heißt: $f$ ist gerade. Dann gilt:
 		\begin{align*}
 			\hat{f}(k) = & \int_0^1 f(x) \exp(-\pi ikx) \dd{x} \\
