mathe.tex in gesamt inkludiert und Detailänderungen

--- a/Diverses/mathe.tex
+++ b/Diverses/mathe.tex
@@ -10,12 +10,12 @@
 % Dozent seine eigenen Vorlieben zur Nummerierung hat.
 
 % Weitere Pakete
-\usepackage{nicefrac}
+%\usepackage{nicefrac}
 			\usepackage{mathtools}
 			%\usepackage{commath}
-				\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
-				\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-				\DeclarePairedDelimiter{\set}{\{}{\}}
+%				\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+%				\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
+%				\DeclarePairedDelimiter{\set}{\{}{\}}
 				
 			\usepackage{dsfont}
 			%\usepackage{mathrsfs}
@@ -157,7 +157,7 @@
 % Aufrecht zu schreibende Symbole. (fold)
 \DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\id}{id}
-\DeclareMathOperator{\grad}{grad}
+%\DeclareMathOperator{\grad}{grad}
 \DeclareMathOperator{\Ord}{Ord}
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\Ker}{Ker}
@@ -172,7 +172,7 @@
 \DeclareMathOperator{\SL}{SL}
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\opint}{int}
-\DeclareMathOperator{\rank}{rk}
+%\DeclareMathOperator{\rank}{rk}
 \DeclareMathOperator{\Tor}{Tor}
 \DeclareMathOperator{\Ann}{Ann}
 \DeclareMathOperator{\esssup}{ess\,sup}
@@ -182,7 +182,7 @@
 \DeclareMathOperator{\cov}{Cov}
 \DeclareMathOperator{\Cov}{Cov}
 \DeclareMathOperator{\Db}{Db}
-\DeclareMathOperator{\tr}{tr}
+%\DeclareMathOperator{\tr}{tr}
 \DeclareMathOperator{\ord}{ord}
 
 \DeclareMathOperator{\wlim}{wlim}
@@ -213,7 +213,7 @@
 
 
 
-	\newcommand{\op}{\operatorname}
+	%\newcommand{\op}{\operatorname}
 	\newcommand{\MM}{\mathds}
 
 	\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
@@ -256,7 +256,7 @@
 	}
 	
 	\newcommand\restr[1]{{\Big |}_{#1}}
-	\newcommand\gradient\nabla		%triangledown
+	%\newcommand\gradient\nabla		%triangledown
 	
 	\newcommand\limze[1][\empty]{\ensuremath{
 		\ifthenelse	{\equal{#1}{\empty}}
