--- a/Vorlesungen/vl_19.tex
+++ b/Vorlesungen/vl_19.tex
@@ -131,10 +131,10 @@ Konvergenz- und Abstandsbegriffe
 \begin{Definition}{ \label{def:metrik}
 	Sei $X$ eine Menge. Eine \emph{Metrik} auf $X$ ist eine Abbildung auf 
 	$d: X \times X \rightarrow [0, \infty)$ mit:
-	\begin{enumerate}
-		\item[M1] \label{def:metrik:1}$d(x,y) = 0 \Leftrightarrow x = y$
-		\item[M2] \label{def:metrik:2}$d(x,y) \leq d(x,z) + d(z,y)$ für alle $x,y,z \in X$ \hfill (Dreiecksungleichung)
-		\item[M3] \label{def:metrik:3}$d(x,y) = d(y,x)$ für $x,y \in X$ \hfill (Symmetrie)
+	\begin{enumerate}[label=\subscript{M}{{\arabic*}}]
+		\item \label{def:metrik:1}$d(x,y) = 0 \Leftrightarrow x = y$
+		\item \label{def:metrik:2}$d(x,y) \leq d(x,z) + d(z,y)$ für alle $x,y,z \in X$ \hfill (Dreiecksungleichung)
+		\item \label{def:metrik:3}$d(x,y) = d(y,x)$ für $x,y \in X$ \hfill (Symmetrie)
 	\end{enumerate}
 	Das Paar $(X,d)$ heißt \emph{metrischer Raum}. Oftmals sagt man einfach 
 	$X$ ist metrischer Raum, sofern die entsprechende Metrik aus dem Kontext 
