--- a/gesamt.tex
+++ b/gesamt.tex
@@ -8,12 +8,14 @@
 \usepackage{amsthm} 
 %\usepackage[standard]{ntheorem}                            % Theorem-Umgebung
 \usepackage{enumitem}
+	\newcommand{\subscript}[2]{$#1 _ #2$}
 \usepackage{tikz}
 \usepackage{extarrows}
 \usepackage{physics}
 \usepackage{todonotes}
 \usepackage{csquotes}
 \usepackage{cases}
+\input{Diverses/mathe.tex}
 
 \newtheorem{theorem}{Theorem}[section]
 
