--- a/Vorlesungen/vl_19.tex
+++ b/Vorlesungen/vl_19.tex
@@ -49,7 +49,7 @@ ab $9^{\underline{00}}$ Uhr, SR 384 CZ 3}
 			 	\exp(-2\pi ik (-t+1)) \dd{t} \\
 			 = & \int_0^1 f(-t+1)\exp(2\pi i k t - 2\pi ik)  \dd{t} \\
 			 = & \int_0^1 f(t) \exp(2\pi ikt) \dd{t} \\
-			 = & \hat{f}(-k) &= & \overline{\hat{f}(k)}
+			 = & \hat{f}(-k) = \overline{\hat{f}(k)}
 		\end{align*}
 		Ergo: $\hat{f}(k) = \hat{f}(-k) \in \mathbb{R}$ \\
 		Mit Gleichung~\ref{vl_19_gl_1} folgt:
