--- a/gesamt.tex
+++ b/gesamt.tex
@@ -69,6 +69,9 @@
 \newcommand{\riemann}[2]{\mathcal{R}_{[{#1},{#2}]}}
 % \riemann{1}{2} = \mathcal{R}_{[a,b]}
 
+\newcommand{\skp}[2]{<{#1},{#2}>}
+\newcommand{\skpc}{\skp \cdot \cdot}
+
 \title{Skript zur Vorlesung Analysis 2 für Lehramtsstudenten für das Gymnasium}
 
 \begin{document}
@@ -93,5 +96,6 @@
 \input{Vorlesungen/vl_18}
 \input{Vorlesungen/vl_19}
 \input{Vorlesungen/vl_20}
+\input{Vorlesungen/vl_21}
 \end{document}
  	
