Neue Vorlesung hinzugefügt

--- a/Vorlesungen/vl_21.tex
+++ b/Vorlesungen/vl_21.tex
@@ -213,7 +213,7 @@ $X$ sind \emph{äquivalent}, wenn $c,C > 0$ existieren mit:
 	\end{itemize}
 }\end{Beispiel}
 
-\begin{Lemma}{%13
+\begin{Lemma}{\label{vl_21_lemma_2}%13
 	Sei $(X,d)$ metrischer Raum und $(x_n)$ eine Folge in $X$. Dann sind äquivalent:
 	\begin{itemize}
 		\item $x_n \overset{n\rightarrow \infty}{\longrightarrow}x$
